<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/wifi_ssid"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/input_ssid"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:hint="@string/wifi_ssid_hint"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/wifi_passwd"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/input_passwd"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:hint="@string/wifi_passwd_hint"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:textColor="#ffffff" />

            <CheckBox
                android:id="@+id/show_passwd"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:text="@string/wifi_show"
                android:textColor="#ffffff"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/wifi_channel"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/input_channel"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:hint="@string/wifi_channel_hint"
                android:inputType="number"
                android:lines="1"
                android:maxLength="2"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_savewifi"
                android:layout_width="240dp"
                android:layout_height="42dp"
                android:text="@string/wifi_save"
                android:background="@drawable/btn_menu_bg"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
