<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37474f"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="42dp"
        android:text="@string/setting_wifi"
        android:textColor="#ffffff"
        android:textSize="27sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/wifi_ssid"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/input_ssid"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="3"
            android:hint="@string/wifi_ssid_hint"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/wifi_passwd"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/input_passwd"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:hint="@string/wifi_passwd_hint"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="#ffffff" />

        <CheckBox
            android:id="@+id/show_passwd"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:text="@string/wifi_show"
            android:textColor="#ffffff"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/wifi_channel"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/input_channel"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="3"
            android:hint="@string/wifi_channel_hint"
            android:inputType="number"
            android:lines="1"
            android:maxLength="2"
            android:textColor="#ffffff" />
    </LinearLayout>
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center"
       >

       <Button
           android:id="@+id/btn_savewifi"
           android:layout_width="240dp"
           android:layout_height="42dp"
           android:text="@string/wifi_save"
           android:textColor="#ffffff" />

	</LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="42dp"
        android:text="@string/setting"
        android:textColor="#ffffff"
        android:textSize="27sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:text="@string/device_info_name"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_devinfo_name"
                    android:layout_width="200dp"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:text="@string/device_info_mode"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_devinfo_mode"
                    android:layout_width="200dp"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:text="@string/device_info_hwver"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_devinfo_hwver"
                    android:layout_width="200dp"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:text="@string/device_info_swver"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_devinfo_swver"
                    android:layout_width="200dp"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:text="@string/device_info_devmac"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_devinfo_devmac"
                    android:layout_width="200dp"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </LinearLayout>
             <LinearLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:text="@string/device_info_gponsn"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_devinfo_gponsn"
                    android:layout_width="220dp"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
                
            </LinearLayout>
            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:text="@string/device_info_time"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
				<TextView
                    android:id="@+id/tv_devinfo_runtime"
                    android:layout_width="220dp"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
                

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="#ffffff" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
		
           

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/input_ping_path"
                    android:layout_width="190dp"
                    android:layout_height="42dp"
                    android:hint="8.8.8.8"
                    android:text="8.8.8.8"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/btn_ping"
                    android:layout_width="130dp"
                    android:layout_height="42dp"
                    android:text="@string/gpon_setting_setping"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/input_path"
                    android:layout_width="190dp"
                    android:layout_height="42dp"
                    android:hint="125.20.84.53"
                    android:text="125.20.84.53"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/btn_tracert"
                    android:layout_width="130dp"
                    android:layout_height="42dp"
                    android:text="@string/gpon_setting_settracert"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_reboot"
                    android:layout_width="150dp"
                    android:layout_height="42dp"
                    android:text="@string/gpon_setting_reboot"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/btn_getpon"
                    android:layout_width="150dp"
                    android:layout_height="42dp"
                    android:text="@string/gpon_setting_getpon"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_reset"
                    android:layout_width="150dp"
                    android:layout_height="42dp"
                    android:text="@string/gpon_setting_reset"
                    android:textColor="#ffffff" />
                <Button
                    android:id="@+id/btn_getwan"
                    android:layout_width="150dp"
                    android:layout_height="42dp"
                    android:text="@string/gpon_setting_getwan"
                    android:textColor="#ffffff" />
            </LinearLayout>
            <Button
        android:id="@+id/btn_getvoip"
        android:layout_width="240dp"
        android:layout_height="42dp"
        android:text="@string/gpon_setting_voip"
        android:textColor="#ffffff" />
        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ffffff" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_path_state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:textColor="#ffffff" />
        </ScrollView>
    </LinearLayout>

</LinearLayout>